--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <section class="flexible-container">
             <div class="banner-info">
                 <h1 class="banner-title"> Conmebol <br> Copa America <br> 2021 </h1>
-            <a class="link-button" target="_blank" href="">Watch Live</a>
+            <a class="link-button" target="_blank" href="">Watch Live <span><i class="fas fa-arrow-right"></i></span> </a>
             </div>
             <div class="banner-img">
                 <img src="images/banner.png" alt="">
             </div>
+        </section>    
     </header>
+    <!-- header end -->
+    <!-- main start -->
     <main>
-
         <section class="grid-container">
             <div class="players">
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
-                    <h1 class="player-name">
+                    <h2 class="player-name">
                         Neymar Jr
-                    </h1>
+                    </h2>
                     <p>
-                        Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.
+                        Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer.
                     </p>
                 </div>    
                 <div class="player">
@@ -40,85 +43,116 @@
                     Lionel Messi
                 </h1>
                 <p>
-                    Lionel Messi, in full Lionel Andrés Messi, also called Leo Messi, (born June 24, 1987, Rosario, Argentina), Argentine-born football (soccer) player who was named Fédération Internationale de Football Association.
+                    Lionel Messi, in full Lionel Andrés Messi, also called Leo Messi, (born June 24, 1987, Rosario, Argentina).
                 </p></div>
                 <div class="player"><img src="images/players/player-3.png" alt="">
                 <h1 class="player-name">
                     Cristiano Ronaldo
                 </h1>
                 <p>
-                    Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal, Madeira, Portugal), Portuguese football (soccer) forward who was one of the greatest players of his generation.
+                    Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal, Madeira, Portugal).
                 </p></div>
                 <div class="player"><img src="images/players/player-4.png" alt="">
                 <h1 class="player-name">
                     Paulo Dybala
                 </h1>
                 <p>
-                    Paulo Dybala (born 15 November 1993) is an Argentine footballer who plays as a forward for Italian club Juventus and the Argentina national team.
+                    Paulo Dybala (born 15 November 1993) is an Argentine footballer who plays as a forward for Italian club Juventus.
                 </p></div>
                 <div class="player"><img src="images/players/player-5.png" alt="">
                 <h1 class="player-name">
                     Mesut Ozil
                 </h1>
                 <p>
-                    Ozil is from a Turkish family and his first language is Turkish. He is the third generation of his family to be born in Germany.
+                    Ozil is from a Turkish family and his first language is Turkish.He is the third generation of his family to be born in Germany.
                 </p></div>
                 <div class="player"><img src="images/players/player-6.png" alt="">
                     <h1 class="player-name">
                     Mauro Icardi 
                 </h1>
                 <p>
-                    Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club.
+                    Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði];born 19 February 1993) is an Argentine professional.
                 </p></div>
                 <div class="player"><img src="images/players/player-7.png" alt="">
                 <h1 class="player-name">
                     Di Maria
                 </h1>
                 <p>
-                    Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                    Ángel Fabián Di María(born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain.
                 </p></div>
                 <div class="player"><img src="images/players/player-8.png" alt="">
                 <h1 class="player-name">
                     Kylian Mbappé
                 </h1>
                 <p>
-                    At international level, Mbappé made his senior debut for France in 2017, at age 18. At the 2018 FIFA World Cup, Mbappé became the youngest French player to score at a World Cup.
+                    At international level, Mbappé made his senior debut for France in 2017, at age 18. At the 2018 FIFA World Cup.
                 </p></div>
                 <div class="player"><img src="images/players/player-9.png" alt="">
                 <h1 class="player-name">
                     Mohamed Salah
                 </h1>
                 <p>
-                    Mohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالى‎, Egyptian Arabic pronunciation: [mæˈħam. mæd sˤɑˈlɑːħ ˈɣæːli]; born 15 June 1992) is an Egyptian professional footballer.
+                    Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer.
                 </p></div>
                 <div class="player"><img src="images/players/player-10.png" alt="">
                 <h1 class="player-name">
                     Harry Kane
                 </h1>
                 <p>
-                    Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.
+                    Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club.
                 </p></div>
                 <div class="player"><img src="images/players/player-11.png" alt="">
                 <h1 class="player-name">
                     Kevin De Bruyne
                 </h1>
                 <p>
-                    Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.
+                    Kevin De Bruyne is Belgian professional footballer who plays as a midfielder for Premier League club Manchester City.
                 </p></div>
                 <div class="player"><img src="images/players/player-12.png" alt="">
                 <h1 class="player-name">
                     Philippe Coutinho
                 </h1>
                 <p>
-                    Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                    Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder.
                 </p></div>
-
             </div>
         </section>
-        <section>
-            
+        <section class="highlights-container">
+                <div class="highlights">
+                    <h1 class="highlights-title"> All Highlights <br> Copa America 2021 </h1>
+                    <p class="high-info">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <a class="link-button" target="_blank" href="">Watch Now <span><i class="fas fa-arrow-right"></i></span></a>
+                </div>
+                <div class="highlights-img">
+                    <img src="images/match.png" alt="">
+                </div>
         </section>
+        <!-- extra sectiona number-1 start -->
+        <section class="extra-container">
+            <h2>Official Sponsors</h2>
+            <div id="extra-logo">
+                <img src="images/betsson.png" alt="">
+                <img src="images/kwai-logo.png" alt="">
+                <img src="images/tcl-logo.png" alt="">
+                <img src="images/sino.png" alt="">
+            </div>
+        </section>
+        <!-- extra sectiona number-1 start -->
+        <!-- extra sectiona number-1 start -->
     </main>
+    <!-- main end -->
+    <!-- footer start -->
+    <footer>
+            <img src="images/Logo.png" alt="">
+            <div id="foot-icons">
+                <img src="images/icons/Instagram.png" alt="">
+                <img src="images/icons/Twitter.png" alt="">
+                <img src="images/icons/Youtube.png" alt="">
+                <img src="images/icons/Dribbble.png" alt="">
+            </div>
+            <h3>Copyright<span><i class="far fa-copyright"></i></span> 2022 Football</h3>
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
