--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <img src="images/match.png" alt="">
                 </div>
         </section>
-        <!-- extra sectiona number-1 start -->
+        <!-- extra section number-1 start -->
         <section class="extra-container">
             <h2>Official Sponsors</h2>
             <div id="extra-logo">
@@ -137,8 +137,40 @@
                 <img src="images/sino.png" alt="">
             </div>
         </section>
-        <!-- extra sectiona number-1 start -->
-        <!-- extra sectiona number-1 start -->
+        <!-- extra section number-2 start -->
+        <hr>
+        <section class="extra-container">
+             <h2 class="section-title">Top Blogs</h2>
+            <div class="top-blogs">        
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                Argentina vs Brazil Dream11 prediction, Match preview, Team news, Predicted lineups - Copa America 2021 Final
+                            </h3>
+                            <p class="blog-author">Here's a look at the Dream11 prediction for the Copa America 2021 final match between Argentina and Brazil. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game. </p>
+                        </div>
+                    </article>
+                </div>
+                <div class="blogs">
+                    <article>
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">
+                                Colombia vs Peru Dream11 prediction, Match preview, Team news, Predicted lineups - Copa America 2021 Third Place match
+                            </h3>
+                            <p class="blog-author">Here's a look at the Dream11 prediction for the Copa America 2021 match for third place between Colombia and Peru. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game.
+                            </p>
+                        </div>
+                    </article>
+                </div>
+        </section>
+        <!-- extra section number-1 start -->
     </main>
     <!-- main end -->
     <!-- footer start -->
