--- a/index.html
+++ b/index.html
@@ -44,78 +44,89 @@
                 </h1>
                 <p>
                     Lionel Messi, in full Lionel Andrés Messi, also called Leo Messi, (born June 24, 1987, Rosario, Argentina).
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-3.png" alt="">
                 <h1 class="player-name">
                     Cristiano Ronaldo
                 </h1>
                 <p>
                     Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal, Madeira, Portugal).
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-4.png" alt="">
                 <h1 class="player-name">
                     Paulo Dybala
                 </h1>
                 <p>
                     Paulo Dybala (born 15 November 1993) is an Argentine footballer who plays as a forward for Italian club Juventus.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-5.png" alt="">
                 <h1 class="player-name">
                     Mesut Ozil
                 </h1>
                 <p>
                     Ozil is from a Turkish family and his first language is Turkish.He is the third generation of his family to be born in Germany.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-6.png" alt="">
                     <h1 class="player-name">
                     Mauro Icardi 
                 </h1>
                 <p>
                     Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði];born 19 February 1993) is an Argentine professional.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-7.png" alt="">
                 <h1 class="player-name">
                     Di Maria
                 </h1>
                 <p>
                     Ángel Fabián Di María(born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-8.png" alt="">
                 <h1 class="player-name">
                     Kylian Mbappé
                 </h1>
                 <p>
                     At international level, Mbappé made his senior debut for France in 2017, at age 18. At the 2018 FIFA World Cup.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-9.png" alt="">
                 <h1 class="player-name">
                     Mohamed Salah
                 </h1>
                 <p>
                     Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-10.png" alt="">
                 <h1 class="player-name">
                     Harry Kane
                 </h1>
                 <p>
                     Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-11.png" alt="">
                 <h1 class="player-name">
                     Kevin De Bruyne
                 </h1>
                 <p>
                     Kevin De Bruyne is Belgian professional footballer who plays as a midfielder for Premier League club Manchester City.
-                </p></div>
+                </p>
+            </div>
                 <div class="player"><img src="images/players/player-12.png" alt="">
                 <h1 class="player-name">
                     Philippe Coutinho
                 </h1>
                 <p>
                     Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder.
-                </p></div>
+                </p>
             </div>
+        </div>
         </section>
         <section class="highlights-container">
                 <div class="highlights">
@@ -137,40 +148,40 @@
                 <img src="images/sino.png" alt="">
             </div>
         </section>
-        <!-- extra section number-2 start -->
         <hr>
+        <!-- extra section number-2 start -->
         <section class="extra-container">
              <h2 class="section-title">Top Blogs</h2>
             <div class="top-blogs">        
-                <div class="blogs">
-                    <article class="blog">
+                <div>
+                    <article>
                         <div class="thumbnail">
                             <img src="images/blogs/blog1.png" alt="">
                         </div>
-                        <div class="blog-info">
+                        <div class="blogs">
                             <h3 class="blog-title">
                                 Argentina vs Brazil Dream11 prediction, Match preview, Team news, Predicted lineups - Copa America 2021 Final
                             </h3>
-                            <p class="blog-author">Here's a look at the Dream11 prediction for the Copa America 2021 final match between Argentina and Brazil. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game. </p>
+                            <p class="blog-info">Here's a look at the Dream11 prediction for the Copa America 2021 final match between Argentina and Brazil. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game. </p>
                         </div>
                     </article>
                 </div>
-                <div class="blogs">
+                <div>
                     <article>
                         <div class="thumbnail">
                             <img src="images/blogs/blog2.png" alt="">
                         </div>
-                        <div class="blog-info">
+                        <div class="blogs">
                             <h3 class="blog-title">
                                 Colombia vs Peru Dream11 prediction, Match preview, Team news, Predicted lineups - Copa America 2021 Third Place match
                             </h3>
-                            <p class="blog-author">Here's a look at the Dream11 prediction for the Copa America 2021 match for third place between Colombia and Peru. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game.
+                            <p class="blog-info">Here's a look at the Dream11 prediction for the Copa America 2021 match for third place between Colombia and Peru. Check out the dream11 fantasy team,match prediction, match preview, updates and lineups for the game.
                             </p>
                         </div>
                     </article>
                 </div>
+            </div>
         </section>
-        <!-- extra section number-1 start -->
     </main>
     <!-- main end -->
     <!-- footer start -->
